[Fix]: Footer display on desktop version
- Fixed issue where footer was cut off due to fixed block size.

--- a/src/static/scss/components/_footer.scss
+++ b/src/static/scss/components/_footer.scss
@@ -5,7 +5,6 @@
   bottom: 0;
   width: 100%;
   inline-size: 100%;
-  block-size: 2rem;
   display: grid;
   place-items: center;
   font-size: var(--f-s);
